fix: adjust z-index on select menus to overlap other books

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ form {
   justify-content: center;
   align-items: center;
   background-color: #ebe8d8;
+  z-index: 200;
 }
 
 .hide {
@@ -63,6 +64,7 @@ span {
 .library {
   display: grid;
   grid-area: library;
+  /* position: relative; */
 }
 
 .book-collection {
@@ -81,6 +83,33 @@ span {
   border-radius: 1rem;
   box-shadow: 0 0 5px rgb(166, 166, 166);
   background-color: rgb(235, 235, 235);
+  position: relative;
+}
+
+.book:hover .book-edit {
+  display: block;
+}
+
+.book-edit {
+  display: none;
+  --border: 1px solid #c6c3b2;
+  position: absolute;
+  right: 0;
+  top: 0;
+  border-top-right-radius: inherit;
+  border-bottom-left-radius: inherit;
+  padding: 0em 0.5em;
+  border: none;
+  font-size: 0.625rem;
+  color: rgba(0, 0, 255, 0.8);
+  width: 3rem;
+  border-left: var(--border);
+  border-bottom: var(--border);
+  cursor: pointer;
+}
+
+.book-edit:hover span {
+  text-decoration: underline;
 }
 
 .book-cover-wrapper {
@@ -104,7 +133,7 @@ label > span {
 }
 
 :where(.author, .pages) > span {
-  font-size: 0.65rem;
+  font-size: 0.625rem;
   font-weight: 300;
   color: rgb(24, 24, 24);
 }
@@ -115,22 +144,18 @@ label > span {
   justify-content: space-between;
 }
 
-.btn {
+.btn.read-opt {
   border: 1px solid grey;
   padding: 0.2rem 0;
   border-radius: 0.6rem;
   cursor: pointer;
   text-align: center;
+  position: relative;
 }
 
 .btn,
 .shelf-menu {
   font-size: 0.8125rem;
-}
-
-.read-opt {
-  position: relative;
-  isolation: isolate;
 }
 
 .shelf-menu {
@@ -141,6 +166,7 @@ label > span {
   position: absolute;
   border-radius: inherit;
   outline: 1px solid rgb(135, 135, 135);
+  z-index: 100;
 }
 
 .shelf-menu > button {
